fix(bootstrap4-theme): added line truncation to css of card/image component

--- a/packages/bootstrap4-theme/src/scss/extends/_card-and-image.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_card-and-image.scss
@@ -43,6 +43,11 @@
   }
 
   .card-body {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
     p {
       margin: $uds-size-spacing-4 0 $uds-size-spacing-3 0;
     }
